onik koster por done

--- a/styles/main.css
+++ b/styles/main.css
@@ -103,9 +103,9 @@ body{
     background:rgb(218,240,241);
 }
 .cImgThree{
-    width: 464px;
+    /* width: 464px;
     height: 538px;
-    flex-shrink: 0;
+    flex-shrink: 0; */
     border-radius: 300px 300px 0px 0px;
     background:rgb(228,236,219);
 }
@@ -120,5 +120,30 @@ body{
     object-position: bottom;
 }
 .one{
-    background: url('');
+    background: url('../Flower Asset/pngwing 6.png');
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+}
+.two{
+    background: url('../Flower Asset/pngwing 5.png');
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+}
+.three{
+    background: url('../Flower Asset/pngwing 7.png');
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+}
+.cImgC{
+    text-align: center;
+    text-decoration: underline;
 }
