--- a/styles/main.css
+++ b/styles/main.css
@@ -114,7 +114,7 @@ body{
     margin: auto;
 }
 .cImgA{
-    margin-left: 30px;
+    margin-right: 30px;
 }
 .cImgA img{
     object-position: bottom;
@@ -147,3 +147,24 @@ body{
     text-align: center;
     text-decoration: underline;
 }
+.extConF{
+    display: flex;
+    justify-content: space-between;
+    width: 1440px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+}
+.efImg{
+    text-align: center;
+    width: 33.33%;
+    margin:30px 0px;
+}
+.efC{
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 35px;
+}
+/* sale saction style  */
